--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,20 @@
 	<name>Contoh Penggunaan Automated Test</name>
 
 	<dependencies>
+	
+	
 	   <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.9</version>
             <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.4.8</version>
+            <scope>test</scope>
         </dependency>
 	
 		<dependency>
